# praicing

./: .gitignore  NOTES.md  README.md  pyproject.toml
src/praicing/: openai.py
